[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am  Madhu and my bestie is Prakash!!!
+            Hi! I am  Madhu and my babe is Prakash!!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
